--- a/agendaprof/infraestructure/pom.xml
+++ b/agendaprof/infraestructure/pom.xml
@@ -63,6 +63,12 @@
             <version>2.11</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.12.6</version>
+        </dependency>
+
     </dependencies>
 
 
