--- a/agendaprof/infraestructure/src/main/resources/application.properties
+++ b/agendaprof/infraestructure/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=agendaprof
-
 server.servlet.context-path=/api
 server.port=8080
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -11,3 +10,7 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true 
+
+# Security
+security.jwt.token.secret-key=secret
+security.jwt.token.expire-length=3600000
